# myMCRT

./: CMakeLists.txt  readme.md
include/: bvh.cpp  bvh.h  draw.cpp  draw.h  loadinfo.cpp  loadinfo.h  loadshapes.cpp  loadshapes.h  rayTracer.cpp  rayTracer.h  shape.cpp  shape.h
scenes/cornell-box/: cornell-box.xml
src/: main.cpp
